[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/CharacterContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/CharacterContainerSeperator.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/GUI.gd" type="Script" id=4]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TopScreenGUI" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_bottom = 105.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TopScreenGUI"]
margin_right = 1204.0
margin_bottom = 85.0

[node name="HBoxContainer" type="HBoxContainer" parent="TopScreenGUI/VBoxContainer"]
margin_right = 1204.0
margin_bottom = 15.0

[node name="VBoxContainer" type="VBoxContainer" parent="TopScreenGUI/VBoxContainer/HBoxContainer"]
margin_right = 1204.0
margin_bottom = 15.0
size_flags_horizontal = 3

[node name="TimerGUI" type="MarginContainer" parent="TopScreenGUI/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 1204.0
margin_bottom = 15.0

[node name="TimerLabel" type="RichTextLabel" parent="TopScreenGUI/VBoxContainer/HBoxContainer/VBoxContainer/TimerGUI"]
margin_right = 1204.0
margin_bottom = 15.0
text = "This is a Timer"
fit_content_height = true

[node name="CharacterGUI" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -120.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterGUI"]
margin_right = 1184.0
margin_bottom = 120.0

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterGUI/VBoxContainer"]
margin_right = 1184.0
margin_bottom = 100.0

[node name="CharacterContainer" parent="CharacterGUI/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]

[node name="VSeparator" parent="CharacterGUI/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]

[node name="CharacterContainer2" parent="CharacterGUI/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 329.0
margin_right = 525.0

[node name="VSeparator2" type="VSeparator" parent="CharacterGUI/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 529.0
margin_right = 654.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="CharacterContainer3" parent="CharacterGUI/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 658.0
margin_right = 854.0

[node name="VSeparator3" type="VSeparator" parent="CharacterGUI/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 858.0
margin_right = 984.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="CharacterContainer4" parent="CharacterGUI/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 988.0
margin_right = 1184.0

[editable path="CharacterGUI/VBoxContainer/HBoxContainer/CharacterContainer"]
